--- a/.github/workflows/juejin_helper.yml
+++ b/.github/workflows/juejin_helper.yml
@@ -33,4 +33,5 @@ jobs:
           USER: ${{ secrets.USER }}
           PASS: ${{ secrets.PASS }}
           TO: ${{ secrets.TO }}
-        run: npm ci && node index.js "${COOKIE}" "${USER}" "${PASS}" "${TO}"
+          XZKEY: ${{ secrets.XZKEY }}
+        run: npm ci && node index.js "${COOKIE}" "${USER}" "${PASS}" "${TO}" "${XZKEY}"
